[fix] : fix lamba